Change history
--------------

Release Candidate 1
===================

- Refactored ControllerDescriptorBuilder (renamed to ControllerDescriptorProvider)
  to use child providers to obtain descriptor. Attributes are now descriptors builders
  and that allows one to come up with custom attributes like

  public class MyAttribute : Attribute, ILayoutDescriptorBuilder, IHelperDescriptorBuilder
  {
     public LayoutDescriptor BuildLayoutDescriptor() 
     {
       return new LayoutDescriptor("mylayout");
     }

     public HelperDescriptor[] BuildHelperDescriptors()
     {
       return new HelperDescriptor[] { new HelperDescriptor(typeof(MyHelper)) };
     }
  }

  Kudos to Fabio by coming up with the idea.

- ViewComponents: added subsection support

  (Using nvelocity as example)
  
  #blockcomponent(GridComponent)
    #header
      <th>Name</th>
    #end
    
    #footer
      Showing record $startrecord to $total
    #end
    
    #item
      <td>$item.Name</td>
    #end

    #empty
      <td>No records found</td>
    #end
  #end
  
  On the code you can use

	public override bool SupportsSection(String name)
	{
		return name == "header" || name == "item" || name == "footer" || 
			name == "empty";
	}

	public override void Render()
	{
		ICollection source = (ICollection) ComponentParams["source"];

		StartTable();

		Context.RenderSection("header");

		if (source != null && source.Count != 0)
		{
			foreach(object item in source)
			{
				PropertyBag["item"] = item;
				
				RenderText("<tr>");
				
				Context.RenderSection("item");
				
				RenderText("</tr>");
			}
		}
		else
		{
			RenderText("<tr>");
			Context.RenderSection("empty");
			RenderText("</tr>");
		}

		Context.RenderSection("footer");

		EndTable();
	}

- ViewComponent on NVelocity: added to support to interpolation on component parameters. 

  Action:
  
    public void List()
    {
      PropertyBag.Add("customers", Customer.FindAll());
    }

  View:
